--- a/jf.html
+++ b/jf.html
@@ -1,1 +1,6 @@
-<video scr = "video\jf.mp4"> type="video/mp4"</video>
+<html>
+    <body>
+        <video scr = "video\jf.mp4"></video>
+    </body>
+</html>
+
