--- a/jf.html
+++ b/jf.html
@@ -1,6 +1,7 @@
 <html>
     <body>
-        <video scr = "video\jf.mp4"></video>
+        <a href="video/jf.mp4">PLAY JF DOOR</a>
+
     </body>
 </html>
 
