--- a/bb.html
+++ b/bb.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <a href="app/bb.apk">download blackboard apk file</a>
+        <a href="http://www.dade.sg/img/p/pdf/bb.apk">download blackboard apk file</a>
 
     </body>
 </html>
