--- a/cia/cia.html
+++ b/cia/cia.html
@@ -474,7 +474,7 @@
             <label for="tab1-3">Control</label>
             <input id="tab1-3" name="tabs-4010310090 JP CA" type="radio">
             <div>
-                <p>Absolute Quotas              <span style="color:green">No Control</span></p>
+                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
     <p>License Requirements              <span style="color:green">No Control</span></p>
     <p>ADD/CVD              <span style="color:green">No Control</span></p>
     <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
@@ -705,7 +705,7 @@
             <label for="tab2-3">Control</label>
             <input id="tab2-3" name="tabs-6204637020 JP US" type="radio">
             <div>
-                <p>Absolute Quotas              <span style="color:green">No Control</span></p>
+                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
     <p>License Requirements              <span style="color:green">No Control</span></p>
     <p>ADD/CVD              <span style="color:green">No Control</span></p>
     <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
@@ -873,7 +873,7 @@
             <label for="tab3-3">Control</label>
             <input id="tab3-3" name="tabs-160232110 JP MY" type="radio">
             <div>
-                <p>Absolute Quotas              <span style="color:green">No Control</span></p>
+                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
     <p>License Requirements              <span style="color:green">No Control</span></p>
     <p>ADD/CVD              <span style="color:green">No Control</span></p>
     <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
@@ -1041,7 +1041,7 @@
             <label for="tab4-3">Control</label>
             <input id="tab4-3" name="tabs-38247700 JP BR" type="radio">
             <div>
-                <p>Absolute Quotas              <span style="color:green">No Control</span></p>
+                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
     <p>License Requirements              <span style="color:green">No Control</span></p>
     <p>ADD/CVD              <span style="color:green">No Control</span></p>
     <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
@@ -1218,7 +1218,7 @@
             <label for="tab5-3">Control</label>
             <input id="tab5-3" name="tabs-491199000 AU JP" type="radio">
             <div>
-                <p>Absolute Quotas              <span style="color:green">No Control</span></p>
+                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
     <p>License Requirements              <span style="color:green">No Control</span></p>
     <p>ADD/CVD              <span style="color:green">No Control</span></p>
     <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
