--- a/cia/cia.html
+++ b/cia/cia.html
@@ -474,10 +474,42 @@
             <label for="tab1-3">Control</label>
             <input id="tab1-3" name="tabs-4010310090 JP CA" type="radio">
             <div>
-                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
-    <p>License Requirements              <span style="color:green">No Control</span></p>
-    <p>ADD/CVD              <span style="color:green">No Control</span></p>
-    <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
+                <table style="height: 87px;" width="100%">
+<tbody>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Absolute&nbsp;Quotas</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">License&nbsp;Requirements</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">ADD/CVD</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Tariff&nbsp;Rate&nbsp;Quota</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+</tbody>
+</table>
             </div>
         </div></div></div><div id="6204637020 JP US" class="tabcontent"><div class="tabs"><div class="tab-2">
             <label for="tab2-1">Duty</label>
@@ -705,10 +737,42 @@
             <label for="tab2-3">Control</label>
             <input id="tab2-3" name="tabs-6204637020 JP US" type="radio">
             <div>
-                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
-    <p>License Requirements              <span style="color:green">No Control</span></p>
-    <p>ADD/CVD              <span style="color:green">No Control</span></p>
-    <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
+                <table style="height: 87px;" width="100%">
+<tbody>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Absolute&nbsp;Quotas</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">License&nbsp;Requirements</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">ADD/CVD</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Tariff&nbsp;Rate&nbsp;Quota</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+</tbody>
+</table>
             </div>
         </div></div></div><div id="160232110 JP MY" class="tabcontent"><div class="tabs"><div class="tab-2">
             <label for="tab3-1">Duty</label>
@@ -873,10 +937,42 @@
             <label for="tab3-3">Control</label>
             <input id="tab3-3" name="tabs-160232110 JP MY" type="radio">
             <div>
-                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
-    <p>License Requirements              <span style="color:green">No Control</span></p>
-    <p>ADD/CVD              <span style="color:green">No Control</span></p>
-    <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
+                <table style="height: 87px;" width="100%">
+<tbody>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Absolute&nbsp;Quotas</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">License&nbsp;Requirements</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">ADD/CVD</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Tariff&nbsp;Rate&nbsp;Quota</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+</tbody>
+</table>
             </div>
         </div></div></div><div id="38247700 JP BR" class="tabcontent"><div class="tabs"><div class="tab-2">
             <label for="tab4-1">Duty</label>
@@ -1041,10 +1137,42 @@
             <label for="tab4-3">Control</label>
             <input id="tab4-3" name="tabs-38247700 JP BR" type="radio">
             <div>
-                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
-    <p>License Requirements              <span style="color:green">No Control</span></p>
-    <p>ADD/CVD              <span style="color:green">No Control</span></p>
-    <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
+                <table style="height: 87px;" width="100%">
+<tbody>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Absolute&nbsp;Quotas</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">License&nbsp;Requirements</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">ADD/CVD</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Tariff&nbsp;Rate&nbsp;Quota</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+</tbody>
+</table>
             </div>
         </div></div></div><div id="491199000 AU JP" class="tabcontent"><div class="tabs"><div class="tab-2">
             <label for="tab5-1">Duty</label>
@@ -1218,10 +1346,42 @@
             <label for="tab5-3">Control</label>
             <input id="tab5-3" name="tabs-491199000 AU JP" type="radio">
             <div>
-                <p>Absolute Quotas &#09 &#09 &#09<span style="color:green">No Control</span></p>
-    <p>License Requirements              <span style="color:green">No Control</span></p>
-    <p>ADD/CVD              <span style="color:green">No Control</span></p>
-    <p>Tariff Rate Quota              <span style="color:green">No Control</span></p>
+                <table style="height: 87px;" width="100%">
+<tbody>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Absolute&nbsp;Quotas</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">License&nbsp;Requirements</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">ADD/CVD</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+<tr>
+<td style="width: 344px;">
+<h3><span style="color: #000000;">Tariff&nbsp;Rate&nbsp;Quota</span></h3>
+</td>
+<td style="width: 344px; text-align: center;">
+<div><span style="color: green;">No&nbsp;Control</span></div>
+</td>
+</tr>
+</tbody>
+</table>
             </div>
         </div></div></div><script>
         const items = document.querySelectorAll(".docAccordion button");
