--- a/map/431772000.html
+++ b/map/431772000.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
     <script>
         L_NO_TOUCH = false;
@@ -9,18 +9,18 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.js"></script>
-    {#    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>#}
-    {#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>#}
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js">
     </script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.css"/>
-    {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />#}
-    {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />#}
-    {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />#}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css"/>
+        href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css" />
     <link rel="stylesheet"
-          href="https://rawcdn.githack.com/python-visualization/folium/master/folium/templates/leaflet.awesome.rotate.css"/>
+        href="https://rawcdn.githack.com/python-visualization/folium/master/folium/templates/leaflet.awesome.rotate.css" />
     <style>
         html,
         body {
@@ -31,21 +31,6 @@
         }
     </style>
     <style>
-        html, body {
-            height: 100%;
-        }
-        .leaflet-popup-content{
-            font-size: larger;
-            width: auto;
-        }
-
-        #mmsiform {
-            position: fixed;
-            top: 10px;
-            left: 30px;
-            z-index: 999;
-        }
-
         #map {
             position: absolute;
             top: 0;
@@ -56,7 +41,7 @@
     </style>
 
     <meta name="viewport" content="width=device-width,
-                initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+                initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <style>
         #map_ae3f220e3f4f42a990884bc2e9105a46 {
             position: relative;
@@ -68,41 +53,23 @@
     </style>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.js"></script>
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.css"/>
+        href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.css" />
     <script src="https://rawcdn.githack.com/ardhi/Leaflet.MousePosition/c32f1c84/src/L.Control.MousePosition.js">
     </script>
     <link rel="stylesheet"
-          href="https://rawcdn.githack.com/ardhi/Leaflet.MousePosition/c32f1c84/src/L.Control.MousePosition.css"/>
+        href="https://rawcdn.githack.com/ardhi/Leaflet.MousePosition/c32f1c84/src/L.Control.MousePosition.css" />
     <script src="https://cdn.jsdelivr.net/npm/leaflet-ant-path@1.1.2/dist/leaflet-ant-path.min.js"></script>
 </head>
 
 <body>
 
-<div class="folium-map" id="map_ae3f220e3f4f42a990884bc2e9105a46"></div>
-<div id="mmsiform">
-    <form action="." method="post" class="form-row">
-        {% csrf_token %}
-        <div class="container">
-            <!--            <div class="ui-widget">-->
-            <div class="row">
-                <div class="col-5">
-                    <input type="text" class="form-control"
-                           name="mmsi"
-                           id="mmsi"
-                           placeholder="mmsi">
-                </div>
-                <div class="col text-center">
-                    <input type="submit" value="Search" class="btn btn-success btn-block">
-                </div>
-            </div>
-        </div>
-    </form>
-</div>
+    <div class="folium-map" id="map_ae3f220e3f4f42a990884bc2e9105a46"></div>
+
 </body>
 <script>
     var map_ae3f220e3f4f42a990884bc2e9105a46 = L.map(
@@ -116,6 +83,9 @@
             noWrap: false,
         }
     );
+
+
+
 
 
     var tile_layer_64fe5b17b23e4713b0bd0b0a602dd121 = L.tileLayer(
@@ -159,6 +129,7 @@
     map_ae3f220e3f4f42a990884bc2e9105a46.on('draw:created', function (e) {
         drawnItems.addLayer(e.layer);
     });
+
 
 
     L.control.fullscreen({
@@ -211,13 +182,11 @@
     mouse_position_25b0a3b80e8e454f8960d638819af99f.options["latFormatter"] =
         function (num) {
             return L.Util.formatNum(num, 3) + ' º ';
-        };
-    ;
+        };;
     mouse_position_25b0a3b80e8e454f8960d638819af99f.options["lngFormatter"] =
         function (num) {
             return L.Util.formatNum(num, 3) + ' º ';
-        };
-    ;
+        };;
     map_ae3f220e3f4f42a990884bc2e9105a46.addControl(mouse_position_25b0a3b80e8e454f8960d638819af99f);
 
 
@@ -253,12 +222,12 @@
         "iconAnchor": [25, 50],
         "iconSize": [50, 50],
         "iconUrl": "https://i.imgur.com/mv665Ae.png",
-        "popupAnchor": [0, 0]
+        "popupAnchor": [25, 25]
     });
     marker_c859ba1288d44cc88bc605601085a48f.setIcon(custom_icon_cedd1fd180fa4b09a798dcfca0e910bd);
 
 
-    var popup_f16c603b3fd2483fa9ea96cef62d697a = L.popup({
+  var popup_f16c603b3fd2483fa9ea96cef62d697a = L.popup({
         "maxWidth": 500
     });
 
@@ -305,6 +274,7 @@
 
 
     marker_c859ba1288d44cc88bc605601085a48f.bindPopup(popup_f16c603b3fd2483fa9ea96cef62d697a);
+
 
 
     marker_c859ba1288d44cc88bc605601085a48f.bindTooltip(
@@ -368,4 +338,3 @@
         }
     ).addTo(map_ae3f220e3f4f42a990884bc2e9105a46);
 </script>
-</html>
