--- a/map/431772000.html
+++ b/map/431772000.html
@@ -29,6 +29,10 @@
             margin: 0;
             padding: 0;
         }
+                .leaflet-popup-content{
+            font-size: larger;
+            width: auto;
+        }
     </style>
     <style>
         #map {
