--- a/map/253683000.html
+++ b/map/253683000.html
@@ -31,7 +31,7 @@
         }
         .leaflet-popup-content{
             font-size: larger;
-            width: auto;
+            width: 450px;
         }
     </style>
     <style>
